# ros2sofarfoxy

./: README copy.md  README.md  bridge.txt
bridge_statem/: package.xml  setup.cfg  setup.py
bridge_statem/banxter_bridge/: move_coke.py  prova1.py  publisher_point.py  publisher_point_sm.py  repub_pos.py  subscriber_member_function.py  subscriber_state.py
bridge_statem/launch/: gazebo.launch.py  gzclient.launch.py  gzserver.launch.py  launch.py
bridge_statem/launch/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
bridge_statem/launch/log/: latest_build
bridge_statem/models/coke_can2/: model-1_2.sdf  model-1_3.sdf  model-1_4.sdf  model.config  model.sdf
bridge_statem/worlds/: gazebo_ros_state_demo.world  gazebo_world_demo.world
install/: local_setup.sh  setup.sh
install/examples_rclpy_minimal_subscriber/share/examples_rclpy_minimal_subscriber/: package.ps1  package.sh  package.xml
install/examples_rclpy_minimal_subscriber2/share/examples_rclpy_minimal_subscriber2/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
log/: latest_build
minimal_subscriber/: package.xml  setup.py
minimal_subscriber/examples_rclpy_minimal_subscriber/: move_coke.py  move_coke3.py  publisher_point.py  subscriber_member_function.py
minimal_subscriber/launch/: launch.py
minimal_subscriber2/: package.xml  setup.cfg  setup.py
minimal_subscriber2/examples_rclpy_minimal_subscriber2/: publisher_point.py  publisher_point_sm.py
minimal_subscriber2/launch/: launch.py
ros1_bridge-foxy/: CMakeLists.txt  my_mapping_rules.yaml  package.xml
