<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>banxter_bridge</name>
  <version>0.0.1</version>
  <description>Package to support the Banxter assignment.</description>
  <maintainer email="mail@mail.org">Riccardo Lastrico</maintainer>
  <license>Apache License 2.0</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
<!--   <build_depend>gazebo_msgs</build_depend>
  <exec_depend>gazebo_msgs</exec_depend> -->
  <build_depend>baxter_core_msgs</build_depend>
  <exec_depend>baxter_core_msgs</exec_depend>


  <!-- These test dependencies are optional
  Their purpose is to make sure that the code passes the linters -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
    <baxter_core_msgs mapping_rules="my_mapping_rules.yaml"/>
  </export>
</package>
